# cis194

./: README.md  cis194.cabal
src/Spring13/Week1/: CreditCard.hs  HanoiTower.hs
src/Spring13/Week10/: AParser.hs
src/Spring13/Week11/: AParser.hs  SExpr.hs
src/Spring13/Week12/: Risk.hs
src/Spring13/Week2/: LogAnalysis.hs
src/Spring13/Week3/: Golf.hs
src/Spring13/Week4/: Week4.hs
src/Spring13/Week5/: Calc.hs  StackVM.hs
src/Spring13/Week6/: Fibonacci.hs
src/Spring13/Week7/: Buffer.hs  Editor.hs  JoinList.hs  Scrabble.hs  StringBufEditor.hs  StringBuffer.hs
src/Spring13/Week8/: Employee.hs  Party.hs
src/Week1/: CreditCard.hs  HanoiTower.hs
src/Week2/: LogAnalysis.hs
src/Week3/: Golf.hs
src/Week4/: Week4.hs
test/Spring13/Week1/: CreditCardSpec.hs  HanoiTowerSpec.hs
test/Spring13/Week2/: LogAnalysisSpec.hs
test/Spring13/Week3/: GolfSpec.hs
test/Spring13/Week4/: Week4Spec.hs
test/Spring13/Week5/: CalcSpec.hs
test/Week1/: CreditCardSpec.hs  HanoiTowerSpec.hs
test/Week2/: LogAnalysisSpec.hs
test/Week3/: GolfSpec.hs
test/Week4/: Week4Spec.hs
