name:                cis194
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/githubuser/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , Spring13.Week1.CreditCard
                     , Spring13.Week1.HanoiTower
                     , Spring13.Week2.Log
                     , Spring13.Week2.LogAnalysis
                     , Spring13.Week3.Golf
                     , Spring13.Week4.Week4
                     , Spring13.Week5.Calc
                     , Spring13.Week5.ExprT
                     , Spring13.Week5.Parser
                     , Spring13.Week5.StackVM
                     , Spring13.Week6.Fibonacci
                     , Spring13.Week7.Buffer
                     , Spring13.Week7.Editor
                     , Spring13.Week7.StringBuffer
                     , Spring13.Week7.JoinList
                     , Spring13.Week7.Scrabble
                     , Spring13.Week7.Sized
                     , Spring13.Week8.Party
                     , Spring13.Week8.Employee
                     , Spring13.Week10.AParser
                     , Spring13.Week11.SExpr
                     , Spring13.Week11.AParser
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers >= 0.5
  default-language:    Haskell2010

executable cis194
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cis194
  default-language:    Haskell2010

test-suite cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.String.StripSpec
                     , Spring13.Week1.CreditCardSpec
                     , Spring13.Week1.HanoiTowerSpec
                     , Spring13.Week2.LogAnalysisSpec
                     , Spring13.Week3.GolfSpec
                     , Spring13.Week4.Week4Spec
                     , Spring13.Week5.CalcSpec
  build-depends:       base
                     , cis194
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cis194
